--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -68,7 +68,7 @@ import Base from "../layouts/Base.astro";
 
       <div class="grid-2">
         <label
-          >Consultation preffered date
+          >Consultation preferred date
           <input
             type="text"
             id="booking-date"
