--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -73,7 +73,7 @@ const showCTA = Astro.url.pathname !== "/contact";
           </div>
           <a href="/about">About</a>
           <a href="/clutterbug-styles">Clutterbug Styles</a>
-          <a href="/before-after">Gallery</a>
+          <a href="/gallery">Gallery</a>
 
           <a class="btn" href="/contact">Book a free chat</a>
         </nav>
@@ -121,7 +121,7 @@ const showCTA = Astro.url.pathname !== "/contact";
         <a href="/services">Services</a>
         <a href="/about">About</a>
         <a href="/clutterbug-styles">Clutterbug Styles</a>
-        <a href="/before-after">Gallery</a>
+        <a href="/gallery">Gallery</a>
         <a href="/contact">Contact</a>
       </nav>
 
@@ -215,7 +215,7 @@ const showCTA = Astro.url.pathname !== "/contact";
         <li class="mobile-item">
           <a href="/clutterbug-styles">Clutterbug Styles</a>
         </li>
-        <li class="mobile-item"><a href="/before-after">Gallery</a></li>
+        <li class="mobile-item"><a href="/gallery">Gallery</a></li>
         <li class="mobile-item"><a href="/about">About</a></li>
         <li class="mobile-item cta">
           <a class="btn" href="/contact">Book a free chat</a>
