fix: footer nav again

--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -109,7 +109,8 @@ const showCTA = Astro.url.pathname !== "/contact";
           <strong>Based in Shepparton Victoria</strong> Proudly serving the Goulburn
           Valley and Northern Victoria Region.
         </p>
-        <p class="small">
+        <p>Member of the Institute of Professional Organisers (IOPO) Australia & New Zealand</p>
+                <p class="small">
           © {new Date().getFullYear()} Home Organisers Australia
         </p>
       </div>
